apps/development/nginx/nginx-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.kube-demo.mistyfumes.dev`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    certResolver: cloudflare
